--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,6 @@ services:
     container_name: home-notifier
     restart: unless-stopped
     network_mode: host
+    environment:
+       SPEAKERS: 'Basement speaker'
+       NGROK_SLUG: 'imr-messenger-8334'
